Solved some remaining issues when running Konga behind a reverse proxy on a sub path #278

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -5,18 +5,18 @@
 
 @font-face {
   font-family: "Montserrat-Regular";
-  src: url("/fonts/proximanova-regular.woff") format("opentype");
+  src: url("../fonts/proximanova-regular.woff") format("opentype");
 }
 
 @font-face {
   font-family: "Montserrat-Light";
-  src: url("/fonts/Montserrat-Light.otf") format("opentype");
+  src: url("../fonts/Montserrat-Light.otf") format("opentype");
 }
 
 
 @font-face {
   font-family: "Montserrat-Medium";
-  src: url("/fonts/Montserrat-SemiBold.otf") format("opentype");
+  src: url("../fonts/Montserrat-SemiBold.otf") format("opentype");
 }
 
 
